Fix: wrap ValidatorForm around Dialog

--- a/src/CreatePaletteNav.css
+++ b/src/CreatePaletteNav.css
@@ -16,6 +16,6 @@
 
 .SavePaletteDialog-text {
   font-size: .9rem;
-  margin: 0 0 10px 0;
+  margin: 0 0 1rem 0;
 }
 
