--- a/src/CreatePaletteTools.css
+++ b/src/CreatePaletteTools.css
@@ -56,6 +56,10 @@
   transform: scale(1.2);
 }
 
+.Btn--CreatePaletteTools-add:focus {
+  box-shadow: 0 0 1px 3px rgb(193, 204, 200);
+}
+
 .Btn--CreatePaletteTools-add:disabled {
   background: rgb(99,100,102);
 }
